hphp/hack/test/typecheck/gen1.php.exp
File "gen1.php", line 23, characters 7-8:
Some type constraint(s) here are violated (Typing[4110])
File "gen1.php", line 18, characters 29-29:
'T' is a constrained type
File "gen1.php", line 22, characters 23-23:
'T' is a constrained type
File "gen1.php", line 18, characters 19-19:
This is an object of type A
File "gen1.php", line 22, characters 20-20:
It is incompatible with an object of type B
